# nuget-api-rs

./: COPYING.md  Cargo.toml  README.md
src/: err.rs  lib.rs  model.rs  util.rs
src/model/: version_range.rs
src/ops/: get_package_versions.rs  mod.rs  package_base_address.rs  service_index.rs
tests/: integration_test.rs
