[package]
name = "nuget-client"
version = "0.0.1"
edition = "2021"

[dependencies]
futures = "0.3.30"
nom = "7.1.3"
reqwest = { version = "0.12", features = ["gzip"] }
serde = { version = "1.0", features = ["alloc", "derive"] }
serde_json = "1.0"
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
url = "2.5.1"
