[package]
name = "nuget-client"
version = "0.0.1"
edition = "2021"
authors = ["bd_ <bd_@nadena.dev>"]
description = "A client for querying and resolving NuGet packages from rust"
repository = "https://github.com/bdunderscore/nuget-client-rs"
license = "MIT"
license-file = "COPYING.md"
keywords = ["client", "nuget", "packaging"]

[dependencies]
futures = "0.3.30"
nom = "7.1.3"
reqwest = { version = "0.12", features = ["gzip"] }
serde = { version = "1.0", features = ["alloc", "derive"] }
serde_json = "1.0"
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
url = "2.5.1"
